<resources>
    <string name="app_name">PlantsCare</string>

    <string name="username">UserName</string>
    <string name="enter_your_username">Enter your username</string>

    <string name="email">Email</string>
    <string name="enter_your_email">enter_your_email</string>

    <string name="Password">Password</string>
    <string name="enter_your_Password">enter_your_Password</string>

    <string name="Change_password">Change_password</string>
    <string name="enter_your_confirm_password">enter_your_confirm_password</string>
    <!--    لديك حساب بالفعل؟-->
    <string name="Already_have_account">Already have account?</string>
    <string name="Login">Login</string>
    <string name="signUp">sign Up</string>

    <string name="SIGN_IN">SIGN_IN</string>
    <string name="Dont_have_an_account">Dont have an account?</string>
    <string name="Log_in">Log IN</string>
    <string name="password" />
    <string name="enter_your_password" />
    <string name="confirm_password" />

    <string-array name="category">
        <item>select category</item>
        <item>winter</item>
        <item>summer</item>
        <item>autumn</item>
        <item>spring</item>
    </string-array>


</resources>